--- a/STRAP_v5.4.vcxproj.filters
+++ b/STRAP_v5.4.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="Filter.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="__vm\.STRAP.vsarduino.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Notifier.cpp">
