--- a/STRAP_v5.4.vcxproj.filters
+++ b/STRAP_v5.4.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="Toggle.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Defines.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Notifier.cpp">
